# supreme-octo-fortnight

./: README.md  build.gradle
.github/workflows/: android.yml  build.yml
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle  copy_native_libs.sh
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  main.cpp  old.cpp  zygisk.hpp  zygisk_module.cpp
